<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/constraintLayout2"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".CurrentJob">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="1dp"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="-1dp">

    <TextView
        android:id="@+id/CurrentJobtitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3AEAE"
        android:text="Please enter job details"
        android:textAlignment="center"
        android:textSize="24sp" />


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="60dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textCurrentTitle"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="Title"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textCurrentJobTitle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/edittext_border" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="120dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textJobCompany"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="Company"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentJobCompany"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/edittext_border" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="180dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textJobLocation"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="Location"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentJobLocation"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/edittext_border" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="240dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textJobCOL"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="Cost of Living"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentJobCOL"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="number"
            android:background="@drawable/edittext_border" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="300dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textJobSalary"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="Salary"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentJobSalary"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="number"
            android:background="@drawable/edittext_border"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="360dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textJobBonus"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="Bonus"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentJobBonus"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="number"
            android:background="@drawable/edittext_border" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="420dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textJobRSU"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="Restricted Stock Units"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentJobRSU"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="number"
            android:background="@drawable/edittext_border" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="480dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textJobRelocation"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="Relocation Stipend"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentJobRelocation"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="number"
            android:background="@drawable/edittext_border" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_marginTop="540dp"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textJobPTO"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:text="Paid Time Off"
        android:gravity="center_vertical"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentJobPTO"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="number"
            android:background="@drawable/edittext_border" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="600dp"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteX="1dp">

    <Button
        android:id="@+id/SaveJobButtonID"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@android:drawable/btn_default"
        android:onClick="handleClick"
        android:text="Save Job" />

    <Button
        android:id="@+id/CancelJobButtonID"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@android:drawable/btn_default"
        android:onClick="handleClick"
        android:text="Cancel Job" />
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
