...
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/EditJobButtonID"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:onClick="handleClick"
            android:text="Enter/Edit Current Job" />
    </LinearLayout>

...
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/JobOfferButtonID"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:onClick="handleClick"
            android:text="Enter Job Offers" />
    </LinearLayout>

...
